[tool.poetry]
name = "Mopidy-Ymusic"
version = "0.1.0"
description = "Plugin adding Yandex Music support for Mopidy music server"
authors = ["Rustam Kashapov <hardtechnik91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Mopidy = "3.3.0"
pykka = "3.1.1"
yandex-music = "2.0.1"

[tool.poetry.dev-dependencies]
isort = "5.10.1"
pytest = "7.1.2"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
skip_glob = "buid/"
combine_as_imports = true
ensure_newline_before_comments = true
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "LOCALFOLDER"
src_paths = "mopidy_ymusic"
include_trailing_comma = true
lines_after_imports = 2


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = [
    "--showlocals",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[tool.poetry.plugins."mopidy.ext"]
"ymusic" = "mopidy_ymusic:Extension"
